--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,6 @@
 <head>
   <title>Bao</title>
-  <meta name='viewport' content='width=device-width, initial-scale1' />
+  <meta name='viewport' content='width=device-width, initial-scale=1' />
 </head>
 
 <body>
